k8s/manifests-651659/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-651659
  namespace: journee
  labels:
    app: journee-651659
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-651659
  template:
    metadata:
      labels:
        app: journee-651659
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-651659
          image: gcr.io/my-docker-471807/journee:651659-992056
          ports:
            - containerPort: 3000
