k8s/manifests-651659/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-651659
  namespace: journee
spec:
  selector:
    app: journee-651659
  ports:
    - port: 80
      targetPort: 3000
